# aracnid-airtable

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
aracnid_airtable/: connector.py
i_airtable/: __init__.py  connector.py
schema/: model.py  transform.py
scripts/: release_smoke_test.sh
tests/: conftest.py  test_airtable_connector_functional.py  test_create.py  test_datetime_read_coercion.py  test_delete.py  test_formula_datetime_detection.py  test_read.py  test_update.py
tests/contract/: test_conformance.py
tests/integration/: test_airtable_connector_integration.py  test_datetime_semantics.py
