[tool.poetry]
name = "i-airtable"
version = "0.3.0"
description = "Airtable connector for the Aracnid integration framework"
authors = ["Jason Romano <aracnid@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aracnid/i-airtable"
keywords = ["connector"]

[tool.poetry.dependencies]
python = "^3.10"
#aracnid-core = "^0.1.3"
pyairtable = "^3.1.1"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
aracnid-core = { path = "../aracnid-core", develop = true }
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
