[project]
name = "aracnid-airtable"
version = "1.0.3"
description = "Airtable connector for the Aracnid integration framework"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
authors = [{ name = "Jason Romano", email = "aracnid@gmail.com" }]
keywords = ["airtable", "aracnid", "connector"]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/<owner>/aracnid-airtable"

[tool.poetry.dependencies]
python = "^3.12"
aracnid-core = "1.0.0"
pyairtable = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.15.21"
build = "^1.5.1"
twine = "^6.2.0"
pyright = "^1.1.411"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
env_files = [".env"]
log_cli = true
log_cli_level = "DEBUG"
markers = [
  "contract: shared BaseConnector contract/conformance tests",
  "integration: tests that call external services"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [
    "E501",
    "ANN",
]